<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/numb_of_cities_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:textSize="32sp"
        tools:text="@string/number_of_cities"/>
    <TextView
        android:id="@+id/last_request_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="32sp"
        tools:text="@string/last_date"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="16dp"
        android:id="@+id/request_amount_rv"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:listitem="@layout/request_amount_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_btn"
        android:text="@string/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/copy_token_btn"
        android:text="@string/copy_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_token_btn"
        android:text="@string/delete_token"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</LinearLayout>