<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="56dp"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/days_before_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            tools:text="@string/some_day_ago" />

        <TextView
            android:id="@+id/temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            tools:text="@string/temperature" />

        <TextView
            android:id="@+id/pressure_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            tools:text="@string/pressure"/>

        <TextView
            android:id="@+id/humidity_tv"
            android:layout_width="wrap_content"
            android:textSize="36sp"
            android:layout_height="wrap_content"
            tools:text="@string/humidity" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>